# galois

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Design.md  Galois IR.md  Galois Preview.md  Galois Uml.md
galois/: CMakeLists.txt  assert.hpp  galois.hpp  helper.hpp  logger.hpp  named.hpp
galois/ast/: CMakeLists.txt  ast.hpp  source_position.hpp
galois/codegen/cpu/: llvm_codegen.hpp
galois/framework/: framework.hpp
galois/graph/: graph.hpp
galois/ir/: CMakeLists.txt  builder.hpp  global_context.cpp  global_context.h  ir.hpp  matrix.hpp
galois/lowering/: lowering.hpp
galois/op/: affine_convertor.hpp  binary_operator.hpp  matrix_multiply.hpp  matrix_multiply_op.hpp  op.hpp  pack.hpp  padding.hpp  unpack.hpp
galois/transform/: fuse.hpp  transform.hpp
scripts/: build.sh  configure.sh  test.sh  test_prajna.sh
tests/: CMakeLists.txt  main.cpp  matrix_multiply_test.cpp
